fix: add gap for footer logo

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -272,6 +272,7 @@ a:active {
   align-content: center;
   align-items: center;
   padding-right: 5%;
+  gap: 12px;
 }
 
 
